Correct login rendering on small screens

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,7 +1,7 @@
 #loginForm {
     margin: auto;
     margin-top: 10%;
-    width: 30%;
+    width: 250px;
     height: 200px;
 }
 
